tests with typescript running

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts":{
+    "start":"parcel index.html",
+    "test": "jest --watch"
+  },
   "devDependencies": {
+    "@types/jest": "^24.0.24",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
   }
 }
