--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "scripts":{
-    "start":"parcel index.html",
+  "scripts": {
+    "start": "parcel index.html",
     "test": "jest --watch"
   },
   "devDependencies": {
@@ -8,5 +8,8 @@
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
+  },
+  "dependencies": {
+    "lit-html": "^1.1.2"
   }
 }
